--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,11 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Lilita+One|Muli:400,600,700,800|Raleway:400,500,600,700&display=swap');
 .navbar
 {
     width:100%;
+    max-height:60px;
     background:#20232A;
 font-style: normal;
-font-weight: 700;
 display:flex;
-font-family: 'Lato', sans-serif;
+font-family: 'Raleway', sans-serif;
+}
+.head
+{
+    color:#ffffff;
+    font-size:30px;
+    padding:5px 15px !important;
+    letter-spacing:1px;
+    font-family: 'Lilita One', cursive;
+}
+.head span{
+    color:yellow;
+}
+.head:hover{
+    color:#ffffff;
+    text-decoration: none;
+}
+.active
+{
+    color:#ffffff;
+    font-size:16px;
+    padding:5px 15px !important;
+    letter-spacing: 0.8px;
+    line-height: 24px;
+    font-weight:600;
+    font-family: 'Raleway', sans-serif;
+}
+.active:hover{
+    color:yellow;
+    text-decoration: none;
 }
 .logo
 {
@@ -18,6 +48,10 @@ font-family: 'Lato', sans-serif;
 {
     display:flex;
     height:100%;
+}
+#responsive-navbar-nav
+{
+    margin-left:190px;
 }
 .navtabs ul{
     list-style:none;
