--- a/src/components/style.css
+++ b/src/components/style.css
@@ -94,7 +94,7 @@ background-color:#ffffff;
   font-size:25px;
   font-weight:700;
 }
-.maintext h3, .about h3, .service h3{
+.maintext h3, .about h3, .service h3, .timelinemain h3{
   font-family: 'Open Sans', sans-serif;
   font-weight:800;
   line-height:50px;
@@ -190,8 +190,16 @@ background-color:#ffffff;
   display: inline-block;
   font-size: 18px;
 }
+.microimg
+{
+  max-width:30px;
+}
+.timelinemain{
+ padding:100px 0px;
+}
 .timeline {
   list-style: none;
+  margin-top: 100px;
   padding: 20px 0 20px;
   position: relative;
 }
@@ -371,5 +379,21 @@ padding-left:90px;
   display: inline-block;
   font-size: 16px;
   margin-bottom:20px;
+}
+
+.timeline h4 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 16px;
+  text-align: left;
+  font-weight: 700;
+}
+.timeline p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  padding:0px !important;
+  line-height:20px !important;
+  text-align: left;
+  font-weight: 400;
+  line-height: 30px;
 }
 }
