--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,7 +3,16 @@
   font-size:30px;
 }
 
-
+body{
+  background-color:#ffffff !important;
+}
+#footer {
+  background-color: #000;
+  text-align: center;
+  padding: 30px;
+  color:#ffffff;
+  font-family: 'Open Sans', sans-serif;
+}
 .card {
   margin-top:20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -106,7 +115,20 @@ background-color:#ffffff;
   font-size:14px;
   line-height:24px;
 }
-
+.contact h3{
+  font-family: 'Open Sans', sans-serif;
+  font-weight:800;
+  line-height:50px;
+  font-size:35px;
+  text-align: center;
+}
+.contact p{
+  font-family: 'Montserrat', sans-serif;
+  font-weight:500;
+  font-size:14px;
+  line-height:24px;
+  text-align: center;
+}
 .about p{
   font-family: 'Open Sans', sans-serif;
   font-weight:500;
@@ -189,6 +211,66 @@ background-color:#ffffff;
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
+}
+.tools{
+  padding:50px 0px;
+  background-color:#f4f4f4;
+}
+.card{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+.contact 
+{
+  margin:100px 0px;
+}
+.contact input {
+ 
+  height: 50px;
+  border: 1px solid #f4f4f4;
+  font-size: 15px;
+  background-color: #f4f4f4;
+  font-weight: 500;
+}
+.controls {
+  display: block;
+  width: 100%;
+  margin-top:10px;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #f4f4f4;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.contact textarea {
+  border: 1px solid #f4f4f4;
+  padding-top: 10px;
+  background-color: #f4f4f4;
+  font-size: 15px;
+  font-weight: 500;
+}
+.container2
+{
+  padding:20px;
+  margin-left:20%;
+  margin-right:20%;
+}
+.medium
+{
+  max-width:120px !important;
+  width:100%;
+}
+.martop
+{
+  margin-top:-15px;
+}
+.tools p{
+  font-family: 'Montserrat', sans-serif;
+  font-size:14px;
 }
 .microimg
 {
@@ -396,4 +478,6 @@ padding-left:90px;
   font-weight: 400;
   line-height: 30px;
 }
+
+
 }
