--- a/src/components/style.css
+++ b/src/components/style.css
@@ -30,6 +30,7 @@ line-height:30px;
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
+  
   .mid
   {
     margin-top:50px;
@@ -128,6 +129,8 @@ background-color:#ffffff;
   font-size:14px;
   line-height:24px;
   text-align: center;
+  color: #325eff;
+  font-weight: 600;
 }
 .about p{
   font-family: 'Open Sans', sans-serif;
