--- a/src/components/style.css
+++ b/src/components/style.css
@@ -78,10 +78,10 @@ line-height:30px;
 }
 .main
 {
-  background-color:#FFE01B !important;
+  background-color:#ffffff !important;
   min-height:100vh;
 }
-.about{
+.about, .portfolio{
   padding:100px 0px;
 background-color:#ffffff;
 }
@@ -104,7 +104,7 @@ background-color:#ffffff;
   font-size:25px;
   font-weight:700;
 }
-.maintext h3, .about h3, .service h3, .timelinemain h3{
+.maintext h3, .about h3, .service h3, .timelinemain h3, .portfolio h3{
   font-family: 'Open Sans', sans-serif;
   font-weight:800;
   line-height:50px;
@@ -137,6 +137,48 @@ background-color:#ffffff;
   font-weight:500;
   font-size:16px;
   line-height:32px;
+}
+.center
+{
+  margin-top:30px;
+  text-align: center;
+}
+.cli
+{
+  max-width:600px;
+  min-height:250px;
+  width:100%;
+}
+.portfolio h4 {
+  font-weight: 700;
+  color: #325eff;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  padding:10px;
+}
+.portfolio h6 {
+  font-weight: 600;
+  color: #fff;
+  background-color: #130f40;
+  padding: 2px 12px;
+  display: inline-block;
+  margin: 0 0 15px;
+  font-size: 13px;
+  line-height: 23px;
+  letter-spacing: 1px;
+}
+.portfolio ul li {
+  display: block;
+  font-size: 14px;
+  line-height: 24px;
+  padding: 2px 0;
+  font-weight: 500;
+  font-family: 'Open Sans', sans-serif;
+  color: #130f40;
+}
+.portfolio ul li span {
+  font-weight: 700;
+  padding-right: 4px;
 }
 /*socialmedia*/
 .fa {
@@ -182,6 +224,13 @@ background-color:#ffffff;
   text-decoration: none !important;
   border-radius: 50%;
 }
+.right{
+  float:right;
+}
+.yellow
+{
+  background-color:#FFE01B;
+}
 #borderimg2 {
   border: 10px solid transparent;
   padding: 10px;
@@ -222,6 +271,7 @@ background-color:#ffffff;
 .card{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  margin-top:40px !important;
 }
 .contact 
 {
