--- a/src/components/style.css
+++ b/src/components/style.css
@@ -68,6 +68,22 @@ line-height:30px;
   padding:2px;
   font-size:15px;
 }
+.counter {
+  padding: 12px 20px 10px;
+  border-left: 3px solid #325eff;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  font-family: 'Open Sans', sans-serif;
+  border-radius: 2px;
+  margin: 30px 0 0;
+}
+.counter h3{
+  font-weight:700;
+}
+.counter p{
+  font-weight:500;
+  color:#000000;
+}
   .top
 {
   margin-top:50px !important;
