--- a/src/components/style.css
+++ b/src/components/style.css
@@ -264,6 +264,7 @@ background-color:#ffffff;
   border-radius:2px;
   text-align: center;
   text-decoration: none;
+  margin-bottom: 20px;
   display: inline-block;
   font-size: 18px;
 }
@@ -278,6 +279,7 @@ background-color:#ffffff;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  margin-bottom: 20px;
   font-size: 18px;
 }
 .tools{
