--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -3,7 +3,7 @@
 {
     width:100%;
     max-height:60px;
-    background:#20232A;
+    background:#36344d;
 font-style: normal;
 display:flex;
 font-family: 'Raleway', sans-serif;
