--- a/src/components/style.css
+++ b/src/components/style.css
@@ -154,6 +154,21 @@ background-color:#ffffff;
   font-size:16px;
   line-height:32px;
 }
+.contact h4{
+  font-family: 'Open Sans', sans-serif;
+  font-weight:500;
+  margin-top:10px;
+  text-align: center;
+  font-size:18px;
+  line-height:32px;
+}
+.iframe
+{
+  margin-top:40px;
+  max-width:500px;
+  width:100%;
+  min-height:400px;
+}
 .center
 {
   margin-top:30px;
