--- a/src/components/style.css
+++ b/src/components/style.css
@@ -70,6 +70,7 @@ line-height:30px;
 }
 .counter {
   padding: 12px 20px 10px;
+  background-color:#ffffff;
   border-left: 4px solid #325eff;
   -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
@@ -94,7 +95,11 @@ line-height:30px;
 }
 .main
 {
-  background-color:#ffffff !important;
+  background: url(../assets/banner1.jpg) no-repeat center center;
+    -webkit-background-size: cover!important;
+    -moz-background-size: cover!important;
+    -o-background-size: cover!important;
+    background-size: cover!important;
   min-height:100vh;
 }
 .about, .portfolio{
@@ -113,6 +118,7 @@ background-color:#ffffff;
   min-height:280px;
   width:100%;
 }
+
 .maintext h5{
 
   font-family: 'Raleway', sans-serif;
@@ -259,7 +265,7 @@ background-color:#ffffff;
 }
 .yellow
 {
-  background-color:#FFE01B;
+  background-image: url(../assets/neil.jpeg);
 }
 #borderimg2 {
   border: 10px solid transparent;
